<resources>
    <string name="app_name">ClikNFixTechnician</string>

    <!-- LOGIN SCREEN STRINGS -->
    <string name="signin">LOGIN</string>
    <string name="email_phone_hint">Email/Phone</string>
    <string name="password_hint">Password</string>
    <string name="rem_me">Remember Me</string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>

    <!-- FORGOT PASSWORD SCREEN STRINGS -->
    <string name="forgot_pass_text">Forgot Password</string>
    <string name="forgot_pass_pText">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="email_hint">Email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- HOME SCREEN STRINGS -->
    <string name="home_title">Upcoming/Past Jobs</string>
    <string name="upcoming">UPCOMING</string>
    <string name="past">PAST</string>
    <string name="status">Status:- </string>
    <string name="user_name_text">User Name</string>
    <string name="more_details_text">More Details</string>
    <string name="exit">Please click back again to exit</string>

    <!-- SETTINGS SCREEN STRINGS -->
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="payments">Payments</string>
    <string name="my_earnings">My Earnings</string>
    <string name="reviews">Reviews</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>

    <!-- EARNING SCREEN STRINGS -->
    <string name="earning_title">Earnings</string>
    <string name="total_earning">Total Earning:- Rs.</string>

    <!-- USER PROFILE SCREEN STRINGS -->
    <string name="user_profile">User Profile</string>
    <string name="user_name">User name:-</string>
    <string name="email">Email:-</string>
    <string name="labour">Labour:-</string>
    <string name="age">Age:-</string>
    <string name="address">Address:-</string>
    <string name="verified_document">Verified Document:-</string>

    <!-- CHANGE PASSWORD SCREEN STRINGS -->
    <string name="change_pass_text">Change Password</string>
    <string name="old_pass_text">Old Password</string>
    <string name="new_pass_text">New Password</string>
    <string name="confirm_pass_text">Confirm Password</string>
    <string name="change_pass_pText">Enter your old and new Credentials</string>
    <string name="update_pass_pText">Update Password</string>

    <!-- ACCEPT REJECT JOB SCREEN STRINGS -->
    <string name="accept_reject_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="accept_button">ACCEPT</string>
    <string name="reject_button">REJECT</string>

    <!-- CUSTOMER PROFILE SCREEN STRINGS -->
    <string name="customer_profile">Customer Profile</string>
    <string name="phone">Phone:-</string>
    <string name="bld_grp">Blood Group:-</string>
    <string name="job_date">Job Date</string>
    <string name="job_type">Job Type</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="track_button">TRACK</string>
    <string name="start_job_button">START JOB</string>

    <!-- CUSTOMER PROFILE TRACKING SERVICE STRINGS -->
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">sapna.testing27@gmail.com</string>
    <string name="firebase_password" translatable="false">sapna.testing27@gmail.com</string>

    <!-- OTP SCREEN STRINGS -->
    <string name="otp_from_customer">OTP FROM CUSTOMER</string>
    <string name="get_otp_text">Get OTP From Customer</string>
    <string name="otp_p1">We have sent an OTP on your number</string>

    <!-- RATING SCREEN STRINGS -->
    <string name="ratings_and_review">Rating and Reviews</string>

    <!-- JOB DONE SCREEN STRINGS -->
    <string name="job_complete">Job Complete</string>
    <string name="job_done_text">Job is successfully completed</string>
    <string name="payment_request">&lt;&lt; Swipe left to complete this job</string>

    <!-- PAYMENT SUCCESS SCREEN STRINGS -->
    <string name="payment_success">Payment Successful</string>
    <string name="successful">Successful</string>
    <string name="payment_approved">Your Payment is Approved</string>
    <string name="transaction_details_text">Please Check Your Email for Transaction Details</string>
    <string name="continue_text">CONTINUE</string>

    <!-- CONGRATULATIONS REVIEW SCREEN STRINGS -->
    <string name="congrats">Congratulations</string>
    <string name="job_done">Your job is Successfully Done</string>
    <string name="btn_done">Done</string>

    <!-- CHAT SCREEN STRINGS -->
    <string name="chat_title">Technician/User Chat</string>

    <string name="no_network_connection">Check your internet connection!!!</string>

    <!-- CONTACT US SCREEN STRINGS -->
    <string name="write_msg" translatable="false">Please write your message.</string>
    <string name="send" translatable="false">Send</string>
    <string name="default_notification_channel_id">NotificationChannel</string>


    <string name="map_api2">AIzaSyDKpkPtlJLZC0KR-p-cvb4QXG_5JtXFL40</string>
</resources>
