<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@drawable/login_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:text="@string/payment_success"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="@color/whiteColor"
        android:maxLines="1"
        android:background="@color/edittextHintColor"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_rounded_corner"
            android:orientation="vertical"
            android:padding="@dimen/threezero_dp">

            <TextView
                android:id="@+id/tv_successful_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/successful"
                android:textColor="@color/paymentButtonColor"
                android:textSize="23sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/twozero_dp"
                android:layout_marginBottom="@dimen/twozero_dp"
                android:src="@mipmap/sucessful_icon"
                android:text="@string/successful"
                android:textColor="@color/paymentButtonColor"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_approve_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/payment_approved"
                android:textColor="@color/edittextHintColor"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tv_transaction_details_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/transaction_details_text"
                android:textColor="@color/edittextHintColor"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/ten_dp"/>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp">

                <TextView
                    android:id="@+id/tv_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textColor="@color/forgotPassColor"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rs."
                    android:textColor="@color/forgotPassColor"
                    android:textSize="17sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fivezero_dp"
                android:layout_below="@+id/ll_forgotPass"
                android:layout_marginTop="@dimen/twozero_dp"
                android:background="@drawable/background_white"
                android:backgroundTint="@color/paymentButtonColor"
                android:onClick="onContinueClicked"
                android:text="@string/continue_text"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="19sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>