<!-- TODO: Update blank fragment layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/edittextHintColor"
        android:layout_width="match_parent"
        android:text="@string/congrats"
        android:textColor="@color/whiteColor"
        android:textSize="19sp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/onetwozero_dp"
            android:layout_height="@dimen/onetwozero_dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/threetwo_dp"
            android:src="@mipmap/congratulations_icon"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_congrats"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/onefive_dp"
            android:gravity="center"
            android:text="@string/congrats"
            android:textSize="19sp"
            android:textColor="@color/blackColor" />

        <TextView
            android:id="@+id/tv_job_done"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/onefive_dp"
            android:gravity="center"
            android:text="@string/job_done"
            android:textSize="15sp"
            android:textColor="@color/blackColor" />

        <Button
            android:id="@+id/btn_done"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/btn_done"
            android:textSize="19sp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/twozero_dp"
            android:layout_marginStart="@dimen/threetwo_dp"
            android:layout_marginLeft="@dimen/threetwo_dp"
            android:layout_marginEnd="@dimen/threetwo_dp"
            android:layout_marginRight="@dimen/threetwo_dp"
            android:backgroundTint="@color/paymentButtonColor"
            android:background="@drawable/background_white"
            android:textColor="@color/whiteColor"
            android:onClick="onDoneClicked"/>

    </LinearLayout>











</LinearLayout>