<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/edittextHintColor"
        android:layout_gravity="center">

        <RelativeLayout
            android:id="@+id/iv_back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/onefive_dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:onClick="onBackClicked">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back_icon_header" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/change_pass_text"
            android:textSize="19sp"
            android:gravity="center"
            android:textColor="@color/whiteColor"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fivezero_dp"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/threetwo_dp"
                android:src="@mipmap/login_logo" />



            <TextView
                android:id="@+id/tv_ptext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:gravity="center"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginStart="@dimen/threetwo_dp"
                android:layout_marginEnd="@dimen/threetwo_dp"
                android:text="@string/change_pass_pText"
                android:textColor="@color/whiteColor"
                android:textSize="13sp" />


            <EditText
                android:id="@+id/et_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ptext"
                android:layout_marginStart="@dimen/threetwo_dp"
                android:layout_marginLeft="@dimen/threetwo_dp"
                android:layout_marginTop="@dimen/onefive_dp"
                android:layout_marginEnd="@dimen/threetwo_dp"
                android:backgroundTint="@color/editTextBackColor"
                android:background="@drawable/background_white"
                android:drawableLeft="@mipmap/login_password_icon"
                android:drawablePadding="@dimen/ten_dp"
                android:hint="@string/old_pass_text"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/twofive_dp"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/ten_dp"
                android:paddingRight="@dimen/ten_dp"
                android:textColor="@color/edittextHintColor"
                android:textCursorDrawable="@null"
                android:textSize="17sp"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/et_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_old_pass"
                android:layout_marginStart="@dimen/threetwo_dp"
                android:layout_marginLeft="@dimen/threetwo_dp"
                android:layout_marginTop="@dimen/onefive_dp"
                android:layout_marginEnd="@dimen/threetwo_dp"
                android:backgroundTint="@color/editTextBackColor"
                android:background="@drawable/background_white"
                android:drawableLeft="@mipmap/login_password_icon"
                android:drawablePadding="@dimen/ten_dp"
                android:hint="@string/new_pass_text"
                android:paddingLeft="@dimen/twofive_dp"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/ten_dp"
                android:paddingRight="@dimen/ten_dp"
                android:textColor="@color/edittextHintColor"
                android:textCursorDrawable="@null"
                android:textSize="17sp"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/et_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_new_pass"
                android:layout_marginStart="@dimen/threetwo_dp"
                android:layout_marginLeft="@dimen/threetwo_dp"
                android:layout_marginTop="@dimen/onefive_dp"
                android:layout_marginEnd="@dimen/threetwo_dp"
                android:backgroundTint="@color/editTextBackColor"
                android:background="@drawable/background_white"
                android:drawableLeft="@mipmap/login_password_icon"
                android:drawablePadding="@dimen/ten_dp"
                android:hint="@string/confirm_pass_text"
                android:paddingLeft="@dimen/twofive_dp"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/ten_dp"
                android:paddingRight="@dimen/ten_dp"
                android:textColor="@color/edittextHintColor"
                android:textCursorDrawable="@null"
                android:textSize="17sp"
                android:imeOptions="actionDone"/>

            <Button
                android:layout_width="match_parent"
                android:text="@string/update_pass_pText"
                android:id="@+id/btn_update_pass"
                android:textAllCaps="false"
                android:textColor="@color/blackColor"
                android:textSize="19sp"
                android:onClick="onResetPasswordClicked"
                android:layout_height="@dimen/fivezero_dp"
                android:layout_below="@+id/et_confirm_pass"
                android:layout_marginTop="@dimen/threetwo_dp"
                android:layout_marginLeft="@dimen/threetwo_dp"
                android:layout_marginStart="@dimen/threetwo_dp"
                android:layout_marginBottom="@dimen/fivezero_dp"
                android:layout_marginRight="@dimen/threetwo_dp"
                android:layout_marginEnd="@dimen/threetwo_dp"
                android:background="@drawable/background_white"
                android:backgroundTint="@color/logoColor" />




        </RelativeLayout>



    </ScrollView>


</LinearLayout>